--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: ebressert@gmail.com
 author: Eli Bressert
 description: "Connecting the impossible"
 baseurl: ""
-url: ""
+url: "http://astrobiased.com"
 google_analytics: UA-37562516-1
 
 # Build settings
