--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Eli Bressert
 description: "Connecting the impossible"
 baseurl: ""
 url: "http://astrobiased.com"
-google_analytics: UA-37562516-1
+google_analytics: "UA-37562516-1"
 
 # Build settings
 markdown: kramdown
